<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent><!-- ＠用途說明1: Inherit defaults from Spring Boot -->
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>2.7.0</version>
		<relativePath/> <!-- lookup parent from repository -->
	</parent>
	<groupId>com.checkinout</groupId>
	<artifactId>TIA104G4-CheckInOut</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<packaging>war</packaging>
	<name>TIA104G4-CheckInOut</name>
	<description>TIA104G4-CheckInOut</description>
	<properties>
		<java.version>17</java.version>
	</properties>
	<dependencies>
		<dependency><!-- ＠用途說明2: Add typical dependencies for a web application -->
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-web</artifactId>
		</dependency>
 
		<dependency><!-- ＠用途說明3: marked the embedded servlet container as provided -->
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-tomcat</artifactId>
			<scope>provided</scope>
		</dependency>
		<dependency><!-- ＠用途說明4: test -->
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-mail</artifactId>
		</dependency>

		<dependency>
			<groupId>org.json</groupId>
			<artifactId>json</artifactId>
			<version>20230618</version>
		</dependency>
		<dependency>
    <groupId>org.projectlombok</groupId>
    <artifactId>lombok</artifactId>
    <optional>true</optional>
</dependency>



		<!-- 用途說明5: Starter for using Spring Data JPA with Hibernate -->
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-data-jpa</artifactId>
		</dependency>

		<!-- 用途說明6: for log4j.properties -->
		<!-- Spring Boot日誌系統預設是使用logback -->
		<!-- 對於習慣了log4j的開發者，Spring Boot依然有很好的支援 -->
		<!-- 不過我們在引入log4j之前，需要先排除該logback jar的依賴，再引入log4j的依賴，如下所示: -->
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter</artifactId>
			<exclusions>
				<exclusion>
					<groupId>org.springframework.boot</groupId>
					<artifactId>spring-boot-starter-logging</artifactId>
				</exclusion>
			</exclusions>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-log4j2</artifactId>
			<!-- <version>2.7.0</version> -->
		</dependency>
		
		<!-- ========================================================================================== -->
		<!-- ●前面的jpa已經包含有hibernate，以下為純 hibernate 使用● -->

		<!-- hibernate-core 核心 -->  <!-- spring-boot-starter-data-jpa(2.7.0) 已內建 Hibernate 5.6.9 依賴，但預設未下載 -->
		<dependency>
			<groupId>org.hibernate</groupId>
			<artifactId>hibernate-core</artifactId>
			<!-- <version>5.6.9.Final</version> -->
		</dependency>

		<!-- hibernate-c3p0 連線池 -->               <!-- spring-boot 已內建依賴，但預設未下載 -->
		<dependency>
			<groupId>org.hibernate</groupId>
			<artifactId>hibernate-c3p0</artifactId>
			<!-- <version>5.6.9.Final</version> -->
		</dependency>

		<!-- hibernate-proxool 連線池 -->            <!-- spring-boot 已內建依賴，但預設未下載 -->
		<dependency>
			<groupId>org.hibernate</groupId>
			<artifactId>hibernate-proxool</artifactId>
			<!-- <version>5.6.9.Final</version> -->
		</dependency>


		<!-- ========================================================================================== -->
		<!-- ●以下為 Web App 預備使用● -->

		<!-- Servlet 4.0.1 -->                       <!-- spring-boot 已內建 Servlet 4.0.1 依賴，但預設未下載 -->
		<dependency>
			<groupId>javax.servlet</groupId>
			<artifactId>javax.servlet-api</artifactId>
			<!-- <version>4.0.1</version> -->
			<scope>provided</scope>                  <!-- ※provided只提供編譯，jar檔不匯出 -->
		</dependency>

		<!-- JSTL -->                                <!-- spring-boot 未內建依賴 -->
		<dependency>
			<groupId>org.apache.taglibs</groupId>
			<artifactId>taglibs-standard-impl</artifactId>
			<version>1.2.5</version>
		</dependency>

		<!-- JSTL -->                                <!-- spring-boot 未內建依賴 -->
		<dependency>
			<groupId>org.apache.taglibs</groupId>
			<artifactId>taglibs-standard-spec</artifactId>
			<version>1.2.5</version>
		</dependency>

		<!-- websocket -->                           <!-- spring-boot 已內建依賴，但預設未下載 -->
		<dependency>
			<groupId>javax.websocket</groupId>
			<artifactId>javax.websocket-api</artifactId>
			<!-- <version>1.1</version> -->
			<scope>provided</scope>                  <!-- ※provided只提供編譯，jar檔不匯出 -->
		</dependency>

		<!-- javax.json -->                          <!-- spring-boot 未內建依賴 -->
		<dependency>
			<groupId>org.glassfish</groupId>
			<artifactId>javax.json</artifactId>
			<version>1.1.4</version>
		</dependency>

		<!-- com.sun.mail -->                        <!-- spring-boot 未內建依賴 -->
		<dependency>
			<groupId>com.sun.mail</groupId>
			<artifactId>javax.mail</artifactId>
			<version>1.6.2</version>
		</dependency>


		
		<!-- ========================================================================================== -->
		<!-- ●以下為 JSR 303/349/380 Bean Validation Framework 預備使用● -->

		<!-- javax.validation -->                    <!-- spring-boot(2.7.0) 已內建依賴，但預設未下載 -->
		<dependency>
			<groupId>javax.validation</groupId>
			<artifactId>validation-api</artifactId>
			<!-- <version>2.0.1.Final</version> -->
		</dependency>

		<!-- org.hibernate.validator -->             <!-- spring-boot(2.7.0) 已內建依賴，但預設未下載 -->
		<dependency>
			<groupId>org.hibernate.validator</groupId>
			<artifactId>hibernate-validator</artifactId>
			<!-- <version>6.2.3.Final</version> -->
		</dependency>

		<!-- ========================================================================================== -->
		<!-- ●以下為 資料庫驅動程式 預備使用● -->

		<!-- Oracle JDBC驅動程式 ojdbc8.jar -->
		<!-- Oracle JDBC Driver compatible with JDK8, JDK11, JDK12, JDK13, JDK14 
			 and JDK15 -->
		<dependency>
			<groupId>com.oracle.database.jdbc</groupId>
			<artifactId>ojdbc8</artifactId>
			<!-- <version>21.5.0.0</version> -->     <!-- spring-boot(2.7.0) 已內建依賴21.5.0.0，但預設未下載 -->
		</dependency>

		<!-- MySQL8 JDBC驅動程式 mysql-connector-java-8.x.xx.jar -->
		<!-- MySQL Connector/J -->
		<dependency>
			<groupId>mysql</groupId>
			<artifactId>mysql-connector-java</artifactId>
			<!-- <version>8.0.29</version> -->       <!-- spring-boot(2.7.0) 已內建依賴8.029，但預設未下載 -->
		</dependency>

		
		
		
		
		
		
		
		
		
		
		
		
		
		<!-- ========================================================================================== -->
		<!-- ●以下為 thymeleaf 預備使用● -->

		<!-- thymeleaf -->
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-thymeleaf</artifactId>
		</dependency>
		<dependency>
            <groupId>nz.net.ultraq.thymeleaf</groupId>
            <artifactId>thymeleaf-layout-dialect</artifactId>
        </dependency>

		<!-- hot swapping, disable cache for template, enable live reload -->
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-devtools</artifactId>
			<optional>true</optional>
		</dependency>
		
		<dependency>
    		<groupId>org.springframework.boot</groupId>
    		<artifactId>spring-boot-starter-websocket</artifactId>
		</dependency>

		<dependency>
    		<groupId>com.google.code.gson</groupId>
    		<artifactId>gson</artifactId>
    		<version>2.10.1</version>
		</dependency>

		<!--        redis-->
        <!-- https://mvnrepository.com/artifact/redis.clients/jedis -->
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-data-redis</artifactId>
        </dependency>

<!--       jedis-->
        <dependency>
            <groupId>redis.clients</groupId>
            <artifactId>jedis</artifactId>
            <version>5.2.0</version>
        </dependency>

		<!-- Optional, for bootstrap -->
		<dependency>
			<groupId>org.webjars</groupId>
			<artifactId>bootstrap</artifactId>
			<version>4.2.1</version>
		</dependency>
        <dependency>
            <groupId>org.jetbrains</groupId>
            <artifactId>annotations</artifactId>
            <version>RELEASE</version>
            <scope>compile</scope>
        </dependency>

    </dependencies>

	<build>
		<plugins>
			<plugin><!-- ＠用途說明: Package as an executable jar/war -->
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-maven-plugin</artifactId>
			</plugin>
		</plugins>
	</build>


</project>